5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1749_3091.log
== TEST (2019-05-15 19:07:04) 
-- CODE:
V= int(input("numero de vitorias:"))
E= int(input("numero de empates:"))
D= int(input("numero de derrotas:"))

while()
-- ERROR:
File "XXXX", line 5
    while()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:07:35) 
-- CODE:
V= int(input("numero de vitorias:"))
E= int(input("numero de empates:"))
D= int(input("numero de derrotas:"))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    V= int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:07:45) 
-- CODE:
V= int(input("numero de vitorias:"))
E= int(input("numero de empates:"))
D= int(input("numero de derrotas:"))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    V= int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:34:21) 
-- CODE:
v= int(input("numero de vitorias:"))
e= int(input("numero de empates:"))
d= int(input("numero de derrotas:"))
soma=v

t=0

while(num!=x):
	soma=v+soma
	v=int(input("numero de vitorias:"))
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v= int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:34:32) 
-- CODE:
v= int(input("numero de vitorias:"))
e= int(input("numero de empates:"))
d= int(input("numero de derrotas:"))
soma=v

t=0

while(num!=x):
	soma=v+soma
	v=int(input("numero de vitorias:"))
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v= int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:34:42) 
-- CODE:
v= int(input("numero de vitorias:"))
e= int(input("numero de empates:"))
d= int(input("numero de derrotas:"))
soma=v

t=0

while(num!=x):
	soma=v+soma
	v=int(input("numero de vitorias:"))
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v= int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:35:02) 
-- CODE:
v= int(input("numero de vitorias:"))
e= int(input("numero de empates:"))
d= int(input("numero de derrotas:"))
soma=v

t=0

while(num!=x):
	soma=v+soma
	v=int(input("numero de vitorias:"))
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v= int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:45:56) 
-- CODE:
l=(input("qual o resultado da partidas :")
soma=0

while(l!=x):
	soma=soma=0
	soma=soma+3
	soma=soma+1
	

	
-- ERROR:
File "XXXX", line 2
    soma=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:46:06) 
-- CODE:
l=(input("qual o resultado da partidas :")
soma=0

while(l!=x):
	soma=soma=0
	soma=soma+3
	soma=soma+1
	

	
-- EXECUTION TIME:
0.155541
-- ERROR:
  File "/home/codebench/codes/1749/3091/main.py", line 2
    soma=0
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:46:08) 
-- CODE:
l=(input("qual o resultado da partidas :")
soma=0

while(l!=x):
	soma=soma=0
	soma=soma+3
	soma=soma+1
	

	
-- ERROR:
File "XXXX", line 2
    soma=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:48:34) 
-- CODE:
l=(input("qual o resultado da partidas :")
soma=0

while(l!=x):
	soma=soma+0
	soma=soma+3
	soma=soma+1
	

	
-- ERROR:
File "XXXX", line 2
    soma=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:48:50) 
-- CODE:
l=(input("qual o resultado da partidas :")
soma=0

while(l!=x):
	soma=soma+0
	soma=soma+3
	soma=soma+1
	

	
-- ERROR:
File "XXXX", line 2
    soma=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:48:56) 
-- CODE:
l=(input("qual o resultado da partidas :")
soma=0

while(l!=x):
	soma=soma+0
	soma=soma+3
	soma=soma+1
	

	
-- ERROR:
File "XXXX", line 2
    soma=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
